# SyncL2R

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  readme.md  readme_cn.md  readme_en.md  requirements.txt  setup.py  syncl2r.py
src/: syncl2r.py  test.py
src/connect_core/: Connection.py  connect_config.py  connect_core.py
src/console/: __init__.py  console.py
src/sync_core/: __init__.py  sync_config.py  sync_core.py  sync_task.py
src/utils/: __init__.py  sftp_utils.py  ssh_utils.py  thread_pool.py  utils.py
syncl2r/: __init__.py  syncl2r.py  test.py
syncl2r/bash/: __init__.py  executor.py  mkdir.py  remote_tree.py  terminate.py
syncl2r/command/: __init__.py  app.py  diff.py  exec.py  init.py  pull.py  push.py  remote.py  shell.py  show.py  stop.py  test.py  upload.py
syncl2r/command_core/: __init__.py  command_core.py  deploy_core.py
syncl2r/command_core/mode/: _base.py
syncl2r/config/: __init__.py  constant.py  local.py  remote.py
syncl2r/connect_core/: Connection.py  __init__.py  connect_config.py  utils.py
syncl2r/console/: __init__.py  console.py
syncl2r/history/: history.py
syncl2r/sync_core/: __init__.py  deploy_core.py  sync_core.py  sync_task.py
syncl2r/types/: __init__.py
syncl2r/utils/: __init__.py  md5.py  remote_sh.py  sftp_utils.py  ssh_utils.py  utils.py
test/: config.l2r.yaml  config.yaml  l2r_config.yaml  test.py  test_error.py
test/.l2r/: config.l2r.yaml
test/daemon/: dockerfile  readme.md  run_forever.py
test/test_upload_dir/: a.txt
test/test_upload_dir/child_dir/: child_text.txt
